--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </header>
     <section class="blog__bg">
         <div class="thumb">
-            <img class="thumb__img" src="img/blogbg.jpg" alt="">
+            <img class="thumb__img" src="img/portfolio-bg.jpg" alt="">
             <div class="thumb__info">
                 <h2 class="title title__blog">Our Project</h2>
                 <ul class="breadcrumbs">
@@ -41,38 +41,96 @@
     <div class="page-article">
         <div class="container">
             <div class="tabs">
-                <button class="tab-link" onclick="openTab(event, 'tab1')">Bathroom</button>
+                <button class="tab-link active" onclick="openTab(event, 'tab1')">Bathroom</button>
                 <button class="tab-link" onclick="openTab(event, 'tab2')">Bed Room</button>
                 <button class="tab-link" onclick="openTab(event, 'tab3')">Kitchan</button>
                 <button class="tab-link" onclick="openTab(event, 'tab4')">Living Area</button>
             </div>
             <div id="tab1" class="tab-content" style="display: block;">
                 <div class="tab-content__box">
-                    рккркркрк
+                    <div class="tab-content__thumb">
+                        <img src="img/content-1.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-2.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-3.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-4.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-5.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-6.svg" alt="">
+                    </div>
                 </div>
             </div>
             <div id="tab2" class="tab-content">
                 <div class="tab-content__box">
-                    цпцпупупу
+                    <div class="tab-content__thumb">
+                        <img src="img/content-6.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-5.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-4.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-3.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-2.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-1.svg" alt="">
+                    </div>
                 </div>
             </div>
             <div id="tab3" class="tab-content">
                 <div class="tab-content__box">
-                    <div>
-                        <img src="" alt="">
+                    <div class="tab-content__thumb">
+                        <img src="img/content-1.svg" alt="">
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="tab-content__thumb">
+                        <img src="img/content-2.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-3.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-6.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-5.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-4.svg" alt="">
                     </div>
                 </div>
             </div>
             <div id="tab4" class="tab-content">
                 <div class="tab-content__box">
-                    <div>
-                        <img src="" alt="">
+                    <div class="tab-content__thumb">
+                        <img src="img/content-4.svg" alt="">
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="tab-content__thumb">
+                        <img src="img/content-5.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-6.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-1.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-2.svg" alt="">
+                    </div>
+                    <div class="tab-content__thumb">
+                        <img src="img/content-3.svg" alt="">
                     </div>
                 </div>
             </div>
