--- a/blog.html
+++ b/blog.html
@@ -150,7 +150,7 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p>55 East Birchwood Ave. Brooklyn, New York 11201</p>
+                    <p>55 East Birchwood Ave. Russia, Moscow 108851</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
                     <a href="tel:+79263806245">(926) 380-6245</a>
                 </div>
