--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     <section class="blog__bg">
         <div class="thumb">
             <img class="thumb__img" src="img/portfolio-bg.jpg" alt="">
-            <div class="thumb__info">
+            <div class="thumb__portfolio ">
                 <h2 class="title title__blog">Our Project</h2>
                 <ul class="breadcrumbs">
                     <li><a href="https://vk.com/artem_melman">Home</a></li>
@@ -143,7 +143,7 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p>55 East Birchwood Ave. Brooklyn, New York 11201</p>
+                    <p>55 East Birchwood Ave. Russia, Moscow 108851</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
                     <a href="tel:+79263806245">(926) 380-6245</a>
                 </div>
