--- a/post.html
+++ b/post.html
@@ -125,24 +125,24 @@
                             </a>
                         </div>
                     </div>
-                    <div class="contact__comments">
-                        <h6>Leave a Replay</h6>
-                        <form class="contact-form">
+                    <div class="comments post__comments">
+                        <h3 class="comments-title">Leave a Replay</h3>
+                        <form class="contact-form post__form">
                             <input class="contact-form__input" type="text" placeholder="Name">
                             <input class="contact-form__input" type="email" placeholder="Email">
+                            <input class="contact-form__input" type="url" placeholder="Website">
+                            <input class="contact-form__input" type="tel" placeholder="Phone">
                             <textarea class="contact-form__textarea" name="" id="" cols="30" rows="10" placeholder="Hello Iam Intrested in.."></textarea>
+                            <div class="contact-form__checkbox">
+                                <div class="category-item">
+                                   <input type="checkbox" id="saveData" class="checkbox">
+                                   <label for="saveData">Save my name, email, and web in this browser for the next time I comment.</label>
+                                </div>
+                            </div>
                             <div class="contact-form__btn">
-                                <button type="submit">
-                                    <a href="https://www.youtube.com/" class="link link__contact">Send Now</a>
-                                </button>
+                                <a href="https://www.youtube.com/" class="link link__contact">Send Now</a>
                             </div>
                         </form>
-                        <div class="category">
-                            <div class="category-item">
-                               <input type="checkbox" id="01" class="checkbox">
-                               <label for="01">Save my name, email, and web in this browser for the next time I comment.</label>
-                            </div>
-                        </div>
                     </div>            
                 </div>
                 <div class="sidebar">
