--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
                         <h3 class="articles__title">Let’s Get Solution For <br> Building Construction Work</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
-                            <a class="article-main__link" href="#"></a>
+                            <a class="articles__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -83,7 +83,7 @@
                             Ideas.</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
-                            <a class="article-main__link" href="#"></a>
+                            <a class="articles__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -95,7 +95,7 @@
                             Solution</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
-                            <a class="article-main__link" href="#"></a>
+                            <a class="articles__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -106,7 +106,7 @@
                         <h3 class="articles__title">Let’s Get Solution For <br> Building Construction Work</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
-                            <a class="article-main__link" href="#"></a>
+                            <a class="articles__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -118,7 +118,7 @@
                             Ideas.</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
-                            <a class="article-main__link" href="#"></a>
+                            <a class="articles__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -130,7 +130,7 @@
                             Solution</h3>
                        <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
-                            <a class="article-main__link" href="#"></a>
+                            <a class="articles__link" href="#"></a>
                         </div>
                     </article>
                 </div>
@@ -172,5 +172,6 @@
     <script src="script/script.js"></script>
 </body>
 </html>
+
 
 
