--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <section class="details__bg">
         <div class="thumb">
             <img class="thumb__img" src="img/contact.jpg" alt="">
-            <div class="thumb__info">
+            <div class="thumb__contact">
                 <h2 class="title title__blog">Contact Us</h2>
                 <ul class="breadcrumbs">
                     <li><a href="https://vk.com/artem_melman">Home</a></li>
