--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
         <div class="container">
             <h2 class="error__title">404</h2>
             <p class="error__text">We are sorry, but the page you requested was not found</p>
-            <a href="https://www.youtube.com/" class="link link__contact error__btn">Back To Home</a>
+            <a href="https://www.youtube.com/" class="link error__btn">Back To Home</a>
         </div>
         <div class="error__bg">
             <div class="error__thumb">
