--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                         <input class="contact-form__input" type="tel" placeholder="Phone">
                         <textarea class="contact-form__textarea" name="" id="" cols="30" rows="10" placeholder="Hello Iam Intrested in.."></textarea>
                         <div class="contact-form__btn">
-                            <a href="https://www.youtube.com/" class="link link__contact">Send Now</a>
+                            <a href="https://www.youtube.com/" class="link">Send Now</a>
                         </div>
                     </form>
                 </div>
