--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <textarea class="contact-form__textarea" name="" id="" cols="30" rows="10" placeholder="Hello Iam Intrested in.."></textarea>
                 <div class="contact-form__btn">
                     <button type="submit">
-                        <a href="https://www.youtube.com/" class="link link__contact">Send Now</a>
+                        <a href="https://www.youtube.com/" class="link">Send Now</a>
                     </button>
                 </div>
             </form>
