--- a/post.html
+++ b/post.html
@@ -140,7 +140,7 @@
                                 </div>
                             </div>
                             <div class="contact-form__btn">
-                                <a href="https://www.youtube.com/" class="link link__contact">Send Now</a>
+                                <a href="https://www.youtube.com/" class="link">Send Now</a>
                             </div>
                         </form>
                     </div>            
