--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
                         that it has a more-or-less normal.</p>
                     <div class="about__tel">
                         <button type="submit" class="about__btn"></button>
-                        <p class="about__call">012345678 <br> Call Us Anytime</p>
+                        <div class="about__call">
+                            <p>
+                                <a href="tel:+7012345678">012345678</a>
+                            </p>
+                            <p>
+                                Call Us Anytime
+                            </p>
+                        </div>
                     </div>
                     <a href="#" class="link">Get Free Estimate</a>
                 </div>
@@ -55,55 +62,55 @@
             </div>
             <div class="swiper swiper-feedback">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">LESYA KOHANSKAYA</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">ARTEM MELMAN</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">EDUARD STOEV</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">ARTEM WILGELMOVICH</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">BENNY BENASSI</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">JAKY CHAN</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">DONALD DUCK</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">MIKKY MOUSE</p>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
@@ -159,10 +166,10 @@
                         <span class="articles__tag">Kitchan Design</span>
                     </div>
                     <h3 class="articles__title">
-                        <a href="#">Let’s Get Solution For <br> Building Construction Work</a>
+                        <a href="#">Let’s Get Solution For Building Construction Work</a>
                     </h3>
                     <div class="articles__info">
-                        <span class="articles__date">26 December, 2022 </span>
+                        <span class="articles__date">26 December, 2022</span>
                         <a class="articles__link" href="#"></a>
                     </div>
                 </article>
@@ -172,7 +179,7 @@
                         <span class="articles__tag">Living Design</span>
                     </div>
                     <h3 class="articles__title">
-                        <a href="#">Low Cost Latest Invented <br> Interior Designing <br> Ideas.</a>
+                        <a href="#">Low Cost Latest Invented Interior Designing Ideas.</a>
                     </h3>
                     <div class="articles__info">
                         <span class="articles__date">25 April, 2023 </span>
@@ -185,7 +192,7 @@
                         <span class="articles__tag">Interior Design</span>
                     </div>
                     <h3 class="articles__title">
-                        <a href="#">Best For Any Office <br> & Business Interior Solution</a>
+                        <a href="#">Best For Any Office & Business Interior Solution</a>
                     </h3>
                     <div class="articles__info">
                         <span class="articles__date">15 Oktober, 2023 </span>
@@ -229,7 +236,7 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p>55 East Birchwood Ave.  Russia, Moscow 108851</p>
+                    <p class="footer__address">55 East Birchwood Ave.  Russia, Moscow 108851</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
                     <a href="tel:+79263806245">(926) 380-6245</a>
                 </div>
