--- a/post.html
+++ b/post.html
@@ -219,7 +219,7 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p>55 East Birchwood Ave. Russia, Moscow 108851</p>
+                    <p class="footer__address">55 East Birchwood Ave. Russia, Moscow 108851</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
                     <a href="tel:+79263806245">(926) 380-6245</a>
                 </div>
