--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
                 </a>
                 <nav>
                     <ul class="header__nav">
-                        <li class="header__item"><a class="header__link" href="">Home</a></li>
-                        <li class="header__item"><a class="header__link" href="">Our Projects</a></li>
-                        <li class="header__item"><a class="header__link" href="">Blog</a></li>
-                        <li class="header__item"><a class="header__link" href="">Contact</a></li>
+                        <li class="header__item"><a class="header__link" href="index.html">Home</a></li>
+                        <li class="header__item"><a class="header__link" href="portfolio.html">Our Projects</a></li>
+                        <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
+                        <li class="header__item"><a class="header__link" href="contact.html">Contact</a></li>
                         <li class="header__item"><button class="header__search" onclick="openModal()"><img src="img/search.svg" alt="button"></button></li>
                     </ul>
                 </nav>
+                <button class="header__menu" onclick="openModalMenu()">
+
+                </button>
             </div>
         </div>
     </header>
@@ -254,7 +257,25 @@
             </div>
         </div>
     </div>
+    <div class="overlay" id="overlayMenu">
+        <div class="modal">
+            <div class="container">
+                <div class="modal__content">
+                    <nav>
+                        <ul class="header__nav">
+                            <li class="header__item"><a class="header__link" href="index.html">Home</a></li>
+                            <li class="header__item"><a class="header__link" href="portfolio.html">Our Projects</a></li>
+                            <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
+                            <li class="header__item"><a class="header__link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <button type="button" class="modal__close" onclick="closeModalMenu()"></button>
+            </div>
+        </div>
+    </div>
     <script src="script/swiper-bundle.min.js"></script>
     <script src="script/script.js"></script>
 </body>
 </html>
+
