--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="container">
             <div class="suscribe">
                 <h2 class="title">Personally Newsletter</h2>
-                <p class="text">A bi-weekly newsletter of design inspiration.</p>
+                <p>A bi-weekly newsletter of design inspiration.</p>
                 <div class="subscribe_box">
                     <input class="subscribe__email" type="email" placeholder="Email address">
                     <button class="subscribe__btn" type="submit">Subscribe</button>
