--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <nav>
@@ -23,9 +23,7 @@
                         <li class="header__item"><button class="header__search" onclick="openModal()"><img src="img/search.svg" alt="button"></button></li>
                     </ul>
                 </nav>
-                <button class="header__menu" onclick="openModalMenu()">
-
-                </button>
+                <button class="header__menu" onclick="openModalMenu()"></button>
             </div>
         </div>
     </header>
@@ -34,7 +32,7 @@
             <img class="hero__img" src="img/bg.jpg" alt="">
             <div class="container">
                <h1 class="hero__title">Let Your Home Be Unique</h1>
-               <p class="hero__text">There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
+               <p>There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
             </div>
         </div>
     </section>
@@ -47,14 +45,10 @@
                         when lookings at its layouts the points of using 
                         that it has a more-or-less normal.</p>
                     <div class="about__tel">
-                        <button type="submit" class="about__btn"></button>
+                        <div class="about__btn"></div>
                         <div class="about__call">
-                            <p>
-                                <a href="tel:+7012345678">012345678</a>
-                            </p>
-                            <p>
-                                Call Us Anytime
-                            </p>
+                            <p><a href="tel:+7012345678">012345678</a></p>
+                            <p>Call Us Anytime</p>
                         </div>
                     </div>
                     <a href="#" class="link">Get Free Estimate</a>
@@ -66,10 +60,10 @@
             <div class="swiper swiper-feedback">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <h2 class="title">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">LESYA KOHANSKAYA</p>
+                    <span class="swiper-author">LESYA KOHANSKAYA</span>
                   </div>
                   <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
@@ -82,12 +76,6 @@
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
                     <p class="swiper-author">EDUARD STOEV</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">ARTEM WILGELMOVICH</p>
                   </div>
                   <div class="swiper-slide swiper-feedback__slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
@@ -210,7 +198,7 @@
             <div class="suscribe">
                 <h2 class="title">Personally Newsletter</h2>
                 <p>A bi-weekly newsletter of design inspiration.</p>
-                <div class="subscribe_box">
+                <div class="subscribe-box">
                     <input class="subscribe__email" type="email" placeholder="Email address">
                     <button class="subscribe__btn" type="submit">Subscribe</button>
                 </div>
@@ -225,9 +213,7 @@
                 <input class="contact-form__input" type="email" placeholder="Email">
                 <textarea class="contact-form__textarea" name="" id="" cols="30" rows="10" placeholder="Hello Iam Intrested in.."></textarea>
                 <div class="contact-form__btn">
-                    <button type="submit">
-                        <a href="https://www.youtube.com/" class="link">Send Now</a>
-                    </button>
+                    <a href="https://www.youtube.com/" class="link">Send Now</a>
                 </div>
             </form>
         </div>
@@ -235,13 +221,13 @@
     <footer class="bg">
         <div class="container">
             <div class="footer">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p class="footer__address">55 East Birchwood Ave.  Russia, Moscow 108851</p>
+                    <p class="footer__address">55 East Birchwood Ave.<br>Brooklyn, New York 11201</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
-                    <a href="tel:+79263806245">(926) 380-6245</a>
+                    <a href="tel:+79263806245">(926) 380-6545</a>
                 </div>
             </div>
         </div> 
