--- a/portfolio.html
+++ b/portfolio.html
@@ -11,18 +11,19 @@
     <header>
         <div class="container">
             <div class="header">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <nav>
                     <ul class="header__nav">
-                        <li class="header__item"><a class="header__link" href="">Home</a></li>
-                        <li class="header__item"><a class="header__link" href="">Our Projects</a></li>
-                        <li class="header__item"><a class="header__link" href="">Blog</a></li>
-                        <li class="header__item"><a class="header__link" href="">Contact</a></li>
+                        <li class="header__item"><a class="header__link" href="index.html">Home</a></li>
+                        <li class="header__item"><a class="header__link" href="portfolio.html">Our Projects</a></li>
+                        <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
+                        <li class="header__item"><a class="header__link" href="contact.html">Contact</a></li>
                         <li class="header__item"><button class="header__search" onclick="openModal()"><img src="img/search.svg" alt="button"></button></li>
                     </ul>
                 </nav>
+                <button class="header__menu" onclick="openModalMenu()"></button>
             </div>
         </div>
     </header>
@@ -139,11 +140,11 @@
     <footer class="bg">
         <div class="container">
             <div class="footer">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p class="footer__address">55 East Birchwood Ave. Russia, Moscow 108851</p>
+                    <p class="footer__address">55 East Birchwood Ave. <br> Russia, Moscow 108851</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
                     <a href="tel:+79263806245">(926) 380-6245</a>
                 </div>
@@ -158,6 +159,23 @@
                     <button type="submit" class="modal-search__btn"></button>
                     <button type="button" class="modal-search__close" onclick="closeModal()"></button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay" id="overlayMenu">
+        <div class="modal">
+            <div class="container">
+                <div class="modal__content">
+                    <nav>
+                        <ul class="header__nav">
+                            <li class="header__item"><a class="header__link" href="index.html">Home</a></li>
+                            <li class="header__item"><a class="header__link" href="portfolio.html">Our Projects</a></li>
+                            <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
+                            <li class="header__item"><a class="header__link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <button type="button" class="modal__close" onclick="closeModalMenu()"></button>
             </div>
         </div>
     </div>
