--- a/post.html
+++ b/post.html
@@ -16,10 +16,10 @@
                 </a>
                 <nav>
                     <ul class="header__nav">
-                        <li class="header__item"><a class="header__link" href="">Home</a></li>
-                        <li class="header__item"><a class="header__link" href="">Our Projects</a></li>
-                        <li class="header__item"><a class="header__link" href="">Blog</a></li>
-                        <li class="header__item"><a class="header__link" href="">Contact</a></li>
+                        <li class="header__item"><a class="header__link" href="index.html">Home</a></li>
+                        <li class="header__item"><a class="header__link" href="portfolio.html">Our Projects</a></li>
+                        <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
+                        <li class="header__item"><a class="header__link" href="contact.html">Contact</a></li>
                         <li class="header__item"><button class="header__search" onclick="openModal()"><img src="img/search.svg" alt="button"></button></li>
                     </ul>
                 </nav>
@@ -234,6 +234,23 @@
                     <button type="submit" class="modal-search__btn"></button>
                     <button type="button" class="modal-search__close" onclick="closeModal()"></button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay" id="overlayMenu">
+        <div class="modal">
+            <div class="container">
+                <div class="modal__content">
+                    <nav>
+                        <ul class="header__nav">
+                            <li class="header__item"><a class="header__link" href="index.html">Home</a></li>
+                            <li class="header__item"><a class="header__link" href="portfolio.html">Our Projects</a></li>
+                            <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
+                            <li class="header__item"><a class="header__link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <button type="button" class="modal__close" onclick="closeModalMenu()"></button>
             </div>
         </div>
     </div>
