--- a/blog.html
+++ b/blog.html
@@ -27,19 +27,18 @@
             </div>
         </div>
     </header>
-    <section class="blog__bg">
-        <div class="thumb">
-            <img class="thumb__img" src="img/blogbg.jpg" alt="">
-            <div class="thumb__info">
-                <h2 class="title thumb__title">Articles & News</h2>
-                <ul class="breadcrumbs">
-                    <li><a href="https://vk.com/artem_melman">Home</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
+    <div class="thumb">
+        <img class="thumb__img" src="img/blogbg.jpg" alt="">
+        <div class="thumb__info">
+            <h2 class="title thumb__title">Articles & News</h2>
+            <ul class="breadcrumbs">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
         </div>
+    </div>
     </section>
-    <div class="page-article">
+    <div class="page">
         <div class="container">
             <section class="article-main">
                 <h2 class="title">Latest Post</h2>
@@ -153,7 +152,7 @@
                 <div class="footer__info">
                     <p class="footer__address">55 East Birchwood Ave. <br> Russia, Moscow 108851</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
-                    <a href="tel:+79263806245">(926) 380-6245</a>
+                    <a href="tel:+79263806545">(926) 380-6545</a>
                 </div>
             </div>
         </div> 
