--- a/index.html
+++ b/index.html
@@ -36,84 +36,69 @@
             </div>
         </div>
     </section>
-    <section class="about__section">
-        <div class="container">
-            <div class="about">
-                <div class="about__box">
-                    <h2 class="title">We Create The Art Of Stylish Living Stylishly</h2>
-                    <p class="text">It is a long established fact that a reader will be distracted by the of readable content of a page 
-                        when lookings at its layouts the points of using 
-                        that it has a more-or-less normal.</p>
-                    <div class="about__tel">
-                        <div class="about__btn"></div>
-                        <div class="about__call">
-                            <p><a href="tel:+7012345678">012345678</a></p>
-                            <p>Call Us Anytime</p>
-                        </div>
+    <div class="container">
+        <div class="about">
+            <div class="about__box">
+                <h2 class="title">We Create The Art Of Stylish Living Stylishly</h2>
+                <p>It is a long established fact that a reader will be distracted by the of readable content of a page 
+                    when lookings at its layouts the points of using 
+                    that it has a more-or-less normal.</p>
+                <div class="about__tel">
+                    <div class="about__btn"></div>
+                    <div class="about__call">
+                        <p><a href="tel:+7012345678">012345678</a></p>
+                        <p>Call Us Anytime</p>
                     </div>
-                    <a href="#" class="link">Get Free Estimate</a>
                 </div>
-                <div class="about__thumb">
-                    <img class="about__img" src="img/about-img.jpg" alt="">
-                </div>
+                <a href="#" class="link">Get Free Estimate</a>
             </div>
-            <div class="swiper swiper-feedback">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <span class="swiper-author">LESYA KOHANSKAYA</span>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">ARTEM MELMAN</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">EDUARD STOEV</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">BENNY BENASSI</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">JAKY CHAN</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">DONALD DUCK</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">MIKKY MOUSE</p>
-                  </div>
-                  <div class="swiper-slide swiper-feedback__slide">
-                    <h2 class="title title__slide">What our Customers says...</h2>
-                    <img src="img/kovicki.svg" alt="">
-                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">BUCKS BUNNY</p>
-                  </div>
-                </div>
-                <div class="swiper-button-next swiper-feedback__next"></div>
-                <div class="swiper-button-prev swiper-feedback__prev"></div>
+            <div class="about__thumb">
+                <img class="about__img" src="img/about-img.jpg" alt="">
             </div>
         </div>
-    </section>
-    <section class="brands__section">
+        <div class="swiper swiper-feedback">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">ARTEM MELMAN</p>
+              </div>
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">EDUARD STOEV</p>
+              </div>
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">BENNY BENASSI</p>
+              </div>
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">JAKY CHAN</p>
+              </div>
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">DONALD DUCK</p>
+              </div>
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">MIKKY MOUSE</p>
+              </div>
+              <div class="swiper-slide swiper-feedback__slide">
+                <h2 class="title">What our Customers says...</h2>
+                <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                <p class="swiper-author">BUCKS BUNNY</p>
+              </div>
+            </div>
+            <div class="swiper-button-next swiper-feedback__next"></div>
+            <div class="swiper-button-prev swiper-feedback__prev"></div>
+        </div>
+    </div>
+    <section class="page">
         <div class="container">
             <div class="brands">
                 <img class="brands__item" src="img/brand1.svg" alt="">
@@ -124,7 +109,7 @@
             </div>
         </div>
     </section>
-    <section class="stats__section">
+    <section class="page stats__section">
         <div class="container">
             <ul class="stats__list">
                 <li class="stats__item">
@@ -146,7 +131,7 @@
             </ul>
         </div>
     </section>
-    <section class="articles__section">
+    <section class="page">
         <div class="container">
             <h2 class="title title__articles">Articles & News</h2>
             <p class="text articles__text">It is a long established fact that a reader will be distracted by the of readable content of a page when lookings at its layouts the points of using.</p>
@@ -193,9 +178,9 @@
             </div>
         </div>
     </section>
-    <section class="subscribe__section">
+    <section class="page">
         <div class="container">
-            <div class="suscribe">
+            <div class="subscribe">
                 <h2 class="title">Personally Newsletter</h2>
                 <p>A bi-weekly newsletter of design inspiration.</p>
                 <div class="subscribe-box">
@@ -205,7 +190,7 @@
             </div>
         </div>
     </section>
-    <section class="contact__section">
+    <section class="page">
         <div class="container">
             <div class="title title__contact">Creative project? Let's have a productive talk.</div>
             <form class="contact-form">
