--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
                             <img class="articles__img" src="img/articles1.jpg" alt="">
                             <span class="articles__tag">Kitchan Design</span>
                         </div>
-                        <h3 class="articles__title">Let’s Get Solution For <br> Building Construction Work</h3>
+                        <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
                             <a class="articles__link" href="#"></a>
@@ -79,8 +79,7 @@
                             <img class="articles__img" src="img/articles2.jpg" alt="">
                             <span class="articles__tag">Living Design</span>
                         </div>
-                        <h3 class="articles__title">Low Cost Latest Invented <br> Interior Designing <br>
-                            Ideas.</h3>
+                        <h3 class="articles__title">Low Cost Latest Invented Interior Designing Ideas.</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
                             <a class="articles__link" href="#"></a>
@@ -91,8 +90,7 @@
                             <img class="articles__img" src="img/articles3.jpg" alt="">
                             <span class="articles__tag">Interior Design</span>
                         </div>
-                        <h3 class="articles__title">Best For Any Office & <br> Business Interior <br>
-                            Solution</h3>
+                        <h3 class="articles__title">Best For Any Office & Business Interior Solution</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
                             <a class="articles__link" href="#"></a>
@@ -103,7 +101,7 @@
                             <img class="articles__img" src="img/articles4.jpg" alt="">
                             <span class="articles__tag">Kitchan Design</span>
                         </div>
-                        <h3 class="articles__title">Let’s Get Solution For <br> Building Construction Work</h3>
+                        <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
                             <a class="articles__link" href="#"></a>
@@ -114,7 +112,7 @@
                             <img class="articles__img" src="img/articles5.jpg" alt="">
                             <span class="articles__tag">Living Design</span>
                         </div>
-                        <h3 class="articles__title">Low Cost Latest Invented <br> Interior Designing <br>
+                        <h3 class="articles__title">Low Cost Latest Invented Interior Designing
                             Ideas.</h3>
                         <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
@@ -126,7 +124,7 @@
                             <img class="articles__img" src="img/articles6.jpg" alt="">
                             <span class="articles__tag">Interior Design</span>
                         </div>
-                        <h3 class="articles__title">Best For Any Office & <br> Business Interior <br>
+                        <h3 class="articles__title">Best For Any Office & Business Interior
                             Solution</h3>
                        <div class="article-main__info">
                             <span class="articles-main__date">25 April, 2023 </span>
